# df-global-search

./: .gitignore  .pre-commit-config.yaml  README.md  sample_app.py  setup.cfg  setup.py
df_global_search/: __init__.py
src/df_global_search/: __init__.py
tests/: test_sample_app.py
