[metadata]
name = df_global_search
version = 0.1.1
author = Carlos D. Serrano
author_email = sqlinsights@gmail.com
description = Searches for a string in all columns and returns a styled DataFrame if match found.
long_description = This library will create a search grid for your Pandas DataFrame.
     If a match is found, a styled dataframe will be returned with matching columns highlighted.
    Search can be performed using Text or Regular Expressions.
long_description_content_type = text/plain
url = https://github.com/sqlinsights/df-global-search
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas >= 1.5
    numpy >= 1.24

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    streamlit
    vega-datasets