[metadata]
name = df_global_search
version = 0.1.1
description = Searches for a string in all columns and returns a styled DataFrame if match found.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlinsights/df-global-search
author = Carlos D. Serrano
author_email = sqlinsights@gmail.com
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    numpy>=1.24
    pandas>=1.5
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pre-commit
    streamlit
    vega-datasets
